<resources>
    <string name="app_name">FLIR App</string>
    <string name="camera_button">Camera</string>
    <string name="classifier_button">Classifier</string>
    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="rgb">RGB Image</string>
    <string name="fir">FIR image</string>
    <string name="not_available">N/A</string>
    <string name="apply_transformation">Transform</string>
</resources>
