<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CameraActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_prediction_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/first_prediction_box"
            android:layout_above="@+id/transformation_switch">

            <ImageView
                android:id="@+id/fir_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/fir"
                android:maxWidth="50dp"
                android:minWidth="50dp" />

            <ImageView
                android:id="@+id/rgb_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/rgb"
                android:maxWidth="50dp"
                android:minWidth="50dp" />
        </LinearLayout>

        <Switch
            android:id="@+id/transformation_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/camera_button"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:text="@string/apply_transformation"
            android:onClick="toggleTransformation"/>

        <ToggleButton
            android:id="@+id/camera_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_camera_capture_ready"
            android:onClick="toggleCapture"
            android:textOff="@string/start_recording"
            android:textOn="@string/stop_recording" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>