<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.ClassifierActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_prediction_row"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/first_prediction_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:layout_weight="2" />

            <ProgressBar
                android:id="@+id/first_prediction_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/second_prediction_row"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/first_prediction_row"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/second_prediction_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:layout_weight="2"/>

            <ProgressBar
                android:id="@+id/second_prediction_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/third_prediction_row"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/second_prediction_row"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/third_prediction_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:layout_weight="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/third_prediction_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/third_prediction_row"
            android:layout_above="@+id/transformation_switch">

            <ImageView
                android:id="@+id/fir_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/fir"
                android:maxWidth="50dp"
                android:minWidth="50dp" />

            <ImageView
                android:id="@+id/rgb_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/rgb"
                android:maxWidth="50dp"
                android:minWidth="50dp" />
        </LinearLayout>

        <Switch
            android:id="@+id/transformation_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="20dp"
            android:text="@string/apply_transformation"
            android:onClick="toggleTransformation"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>